# JapDict

./: .gitignore  README.md  build.sh  fr.minemobs.JapaneseDict.json  meson.build
data/: fr.minemobs.JapaneseDict.appdata.xml.in  fr.minemobs.JapaneseDict.desktop.in  fr.minemobs.JapaneseDict.gschema.xml  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: application.vala  japdict.gresource.xml  main.vala  meson.build  window.blp  window.ui  window.vala  word.vala
src/gtk/: help-overlay.ui
